--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "base-app",
-    "version": "0.0.0",
+    "version": "0.0.1",
     "license": "MIT",
     "scripts": {
         "ng": "ng",
@@ -12,29 +12,30 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^5.2.9",
-        "@angular/common": "^5.2.9",
-        "@angular/compiler": "^5.2.9",
-        "@angular/core": "^5.2.9",
-        "@angular/forms": "^5.2.9",
-        "@angular/http": "^5.2.9",
-        "@angular/platform-browser": "^5.2.9",
-        "@angular/platform-browser-dynamic": "^5.2.9",
-        "@angular/router": "^5.2.9",
-        "@ng-bootstrap/ng-bootstrap": "^1.1.0",
+        "@angular/animations": "^7.0.3",
+        "@angular/common": "^7.0.3",
+        "@angular/compiler": "^7.0.3",
+        "@angular/core": "^7.0.3",
+        "@angular/forms": "^7.0.3",
+        "@angular/http": "^7.0.3",
+        "@angular/platform-browser": "^7.0.3",
+        "@angular/platform-browser-dynamic": "^7.0.3",
+        "@angular/router": "^7.0.3",
+        "@ng-bootstrap/ng-bootstrap": "^4.0.0",
         "core-js": "^2.4.1",
         "karma-chai": "^0.1.0",
         "karma-clear-terminal-reporter": "^1.0.0",
         "karma-nyan-reporter": "^0.2.5",
-        "ng-bootstrap": "^1.6.3",
-        "rxjs": "^5.5.6",
-        "tslint-eslint-rules": "^5.1.0",
-        "zone.js": "^0.8.19"
+        "rxjs": "^6.3.3",
+        "tslint-eslint-rules": "^5.4.0",
+        "zone.js": "^0.8.26",
+        "rxjs-compat": "^6.0.0-rc.0"
     },
     "devDependencies": {
-        "@angular/cli": "~1.7.3",
-        "@angular/compiler-cli": "^5.2.9",
-        "@angular/language-service": "^5.2.9",
+        "@angular-devkit/build-angular": "~0.10.0",
+        "@angular/cli": "^7.0.5",
+        "@angular/compiler-cli": "^7.0.3",
+        "@angular/language-service": "^7.0.3",
         "@types/jasmine": "~2.8.3",
         "@types/jasminewd2": "~2.0.2",
         "@types/node": "~6.0.60",
@@ -49,6 +50,6 @@
         "protractor": "~5.1.2",
         "ts-node": "~4.1.0",
         "tslint": "~5.9.1",
-        "typescript": "~2.5.3"
+        "typescript": "~3.1.6"
     }
 }
